--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "type": "git",
     "url": "git://github.com/kanaka/websockify.git"
   },
-  "files": ["../../docs/LICENSE.LGPL-3"],
   "bin": {
     "websockify": "./websockify.js"
   },
@@ -17,8 +16,7 @@
   },
   "dependencies": {
     "ws": ">=0.4.27",
-    "base64": "latest",
-    "optimist": "latest",
-    "policyfile": "latest"
+    "policyfile": "0.0.5",
+    "optimist": "^0.6.1"
   }
 }
